2011-05-12  Marc - A. Dahlhaus  <mad@wol.de>

	* init/job_class.h (JobClass): Add kill signal member
	* init/job_class.c (job_class_new): Initialise kill signal
	* init/tests/test_job_class.c (test_new): Check kill signal initialised
	correctly.
	* init/system.c (system_kill): Change to accept a signal rather than
	a boolean.
	* init/system.h: Update prototype
	* init/tests/test_system.c (test_kill): Update tests to pass signals
	by value.
	* init/job_process.c (job_process_kill, job_process_kill_timer): Pass
	the configured kill signal, or SIGKILL, to the function rather than
	TRUE/FALSE.
	* init/parse_job.c (stanza_kill): Add parsing for kill signal.
	* init/tests/test_parse_job.c (test_stanza_kill): Check parsing works
	* init/errors.h: Add illegal signal error and string.
	* init/man/init.5: Update documentation

	* init/job_class.h (JobClass): Replace oom_adj with oom_score_adj
	* init/job_class.c (job_class_new): Replace oom_adj with oom_score_adj.
	* init/job_process.c (job_process_spawn): Write the new score
	adjustment, falling back to calculating and writing the old value if
	necessary.
	* init/parse_job.c (stanza_oom): Parse both the new and old values,
	converting the old value to the new value if present.
	* init/errors.h: Add new error string.
	* init/man/init.5: Documentation update.
	* init/tests/test_job_class.c (test_new): Update check.
	* init/tests/test_parse_job.c (test_stanza_oom): Update tests.

2011-05-12  Scott James Remnant  <scott@netsplit.com>

	* init/job_process.c (job_process_run): Always make the shell script
	fd 9, since that's the highest that shells are required by POSIX to
	support.  Pass the file descriptor to job_process_spawn()
	(job_process_run): Accept the extra file descriptor, moving it to fd 9.
	(job_process_error_read): Add handling for error condition.
	* init/job_process.h: Adjust prototypes, add constant
	* init/tests/test_job_process.c (test_spawn): Add argument to call in
	tests
