@@ -2,7 +2,6 @@
  *
  * test_conf.c - test suite for init/conf.c
  *
- * Copyright © 2011 Google Inc.
  * Copyright © 2009 Canonical Ltd.
  * Author: Scott James Remnant <scott@netsplit.com>.
  *
