@@ -2,7 +2,6 @@
  *
  * test_dbus.c - test suite for init/dbus.c
  *
- * Copyright © 2011 Google Inc.
  * Copyright © 2010 Canonical Ltd.
  * Author: Scott James Remnant <scott@netsplit.com>.
  *
